--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,1 +1,186 @@
-<div>Hello</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.7.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Portfolio</title>
+  </head>
+
+  <body>
+    <div class="frame">
+      <div class="main_frame">
+        <div class="left_frame">
+          <!-- Left 1 Section Starts ///////////////////////////////// -->
+          <div class="left_1">
+            <div class="left_1_child_top">
+              <img src="images/profile.png" alt="" />
+            </div>
+            <div class="left_1_child_midd"><%=user.name%></div>
+            <div class="left_1_child_midd2"><%=user.profession%></div>
+            <div class="left_1_icons">
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Facebook.svg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Instagram.svg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Twitter.svg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Linkeding.svg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Youtube.svg" class="icon-1" alt="" />
+                </div>
+              </a>
+              <a class="link_href" href="">
+                <div class="icon">
+                  <img src="icon/Dribbble.svg" class="icon-1" alt="" />
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="marginer"></div>
+          <!-- Left 2 Section Starts ///////////////////////////////// -->
+          <div class="left_2">
+            <div class="left_2_top">
+              <p class="p_1">Age:</p>
+              <p class="p_2"><%=user.age%></p>
+            </div>
+            <div class="left_2_midd">
+              <p class="p_1">Residence:</p>
+              <p class="p_2">BD</p>
+            </div>
+            <div class="left_2_midd2">
+              <p class="p_1">Freelance:</p>
+              <p class="p_available">Available</p>
+            </div>
+            <div class="left_2_bottom">
+              <p class="p_1">Address:</p>
+              <p class="p_2"><%=user.residence%></p>
+            </div>
+          </div>
+          <div class="marginer"></div>
+          <!-- Left 3 Section Starts ///////////////////////////////// -->
+          <div class="left_3">
+            <div class="left_3_first">
+              <p class="left_3_title">Languages</p>
+            </div>
+            <div class="left_3_top left_3_all">
+              <p>Uzbek</p>
+              <p>100%</p>
+            </div>
+            <div class="left_3_percentage">
+              <img
+                src="images/percentage_image/rectangle.svg"
+                alt=""
+                class="percent_img"
+              />
+            </div>
+            <div class="left_3_midd left_3_all">
+              <p>Korean</p>
+              <p>80%</p>
+            </div>
+            <div class="left_3_percentage">
+              <img
+                src="images/percentage_image/Line.svg"
+                alt=""
+                class="percent_img"
+              />
+            </div>
+            <div class="left_3_bottom left_3_all">
+              <p>English</p>
+              <p>70%</p>
+            </div>
+            <div class="left_3_percentage">
+              <img
+                src="images/percentage_image/Line1.svg"
+                alt=""
+                class="percent_img"
+              />
+            </div>
+          </div>
+          <div class="marginer"></div>
+          <!-- Left 4 Section Starts ///////////////////////////////// -->
+          <div class="left_4">
+            <div class="left_4_first">
+              <p class="left_4_title">Skills</p>
+            </div>
+            <div class="left_4_top left_4_all">
+              <p>Html</p>
+              <p>90%</p>
+            </div>
+            <div>
+              <img
+                src="images/percentage_image/left_4_img/left_4_1.svg"
+                alt=""
+              />
+            </div>
+            <div class="left_4_midd1 left_4_all">
+              <p>CSS</p>
+              <p>85%</p>
+            </div>
+            <div>
+              <img
+                src="images/percentage_image/left_4_img/left_4_2.svg"
+                alt=""
+              />
+            </div>
+            <div class="left_4_midd2 left_4_all">
+              <p>Js</p>
+              <p>80%</p>
+            </div>
+            <div>
+              <img
+                src="images/percentage_image/left_4_img/left_4_3.svg"
+                alt=""
+              />
+            </div>
+            <div class="left_4_midd3 left_4_all">
+              <p>PHP</p>
+              <p>75%</p>
+            </div>
+            <div>
+              <img
+                src="images/percentage_image/left_4_img/left_4_4.svg"
+                alt=""
+              />
+            </div>
+            <div class="left_4_bottom left_4_all">
+              <p>WordPress</p>
+              <p>85%</p>
+            </div>
+            <div>
+              <img
+                src="images/percentage_image/left_4_img/left_4_5.svg"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="marginer"></div>
+          <div class="left_5"></div>
+          <div class="marginer"></div>
+        </div>
+        <div class="midd_frame"></div>
+        <div class="right_frame"></div>
+      </div>
+    </div>
+  </body>
+</html>
